syntax = "proto3";

package NUgc.NSchema.NImages;

// Feedback about image search results.
message TImageSearchFeedback {
    // Request where the feedback was collected.
    string RequestId = 1;

    // User evaluation of the results, 1-5.
    int32 Rating = 2;

    // Textual review of the results.
    string ReviewText = 3;

    // Search query that was entered.
    string QueryText = 4;

    // How the feedback was collected.
    string FeedbackCollectionType = 5;

    // Number of images expanded by user.
    int32 NumImagesViewed = 6;

    // Number of screens paged by user.
    int32 NumScreensViewed = 7;
}
